# aoc2024

./: Cargo.toml
src/: lib.rs  main.rs
src/lib/aoc_maker/: Cargo.toml
src/lib/aoc_maker/src/: lib.rs
