[package]
name = "aoc"
version = "0.1.0"
edition = "2021"
default-run = "aoc"

[dependencies]
clap = {version = "4.0", features = ["derive"]}
aoc_maker = {path = "./src/lib/aoc_maker"}
reexport-proc-macro = "1.0.7"
regex = "1.10.2"
counter = "0.5.7"
gcd = "2.3.0"
reqwest = {version = "0.11.22", features = ["blocking", "cookies"]}
chrono = {version = "0.4.31", features = ["clock"]}
itertools = "0.12.0"

[dev-dependencies]
criterion = {version = "0.4", features = ["html_reports"]}
